src/assets/styles.css
/* ... */
.about-us-3__overlay--secondary {
    --padding-horizontal: 2vw;
    --padding-vertical: 10vh;
    /*
     If the percentage is too big, the width + padding will exceed the given grid cell space.
     For some reason, `box-sizing: border-box` does not work to prevent that.
     */
    padding: var(--padding-vertical) var(--padding-horizontal) 0;
    /* Multiply --horizontal by 2 as we need to account for both left and right padding */
    width: calc(100% - (2 * var(--padding-horizontal)));
}

/* About Us page end */

/* Member card component start */
.member-cards {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: 2vw;
    row-gap: 2vh;
    padding: 0 1vw 5vh 3vw;
    /* Maybe figure a way out to not make the last element align to middle if it's the only element in the row? */
    justify-content: space-evenly;
}

.member-card {
    position: relative;
    /* Width and height need to be the same to ensure a square */
    width: 30vw;
    min-width: 200px;
    aspect-ratio: 1 / 1;
    /* Overflow hidden so that we can hide the introductions */
    overflow: hidden;
}

.member-card > img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.member-card__overlay {
    position: absolute;
    bottom: -80%;
    height: 100%;
    width: 100%;
    padding: 2vh 2vw;
    box-sizing: border-box;
    /* Needed to create an effect where the overlay slides up */
    transition: bottom 750ms ease-out;
    background-color: var(--ecf-green-translucent);
    color: white;
}

/* Unveils the previously hidden intro box */
.member-card:hover > .member-card__overlay {
    bottom: 0;
}

.member-card__name {
    height: 20%;
    transition: height 850ms ease-out;
}

.member-card:hover .member-card__name {
    height: 15%;
}

.member-card__introduction {
    /* This 85% is based off the changed height of .bc-2__name, not the initial un-hovered height */
    height: 85%;
    padding-right: 1vw;
    overflow: auto;
    scrollbar-color: black var(--ecf-green-translucent);
    /* This needs to be here or the scroll bar looks obnoxiously big on chromium browsers (at least in testing)*/
    scrollbar-width: thin;
}

@supports (-moz-appearance: none) {
    .member-card__introduction {
        /* Undo the thinning done as the scroll bar looks ridiculously small if the scroll bar width is set to thin */
        scrollbar-width: initial;
    }
}

.member-card__introduction > h4 {
    line-height: 1.5;
}

/* Member card component end */

/* BC page start */
.bc-1__bg {
    background-image: url("./img/about-us/ca/bc/bc-1.webp");
}

.bc-2__header {
    display: flex;
    flex-direction: column;
    row-gap: 1vh;
    padding: 5vh 5vw;
}

.bc-2__header > h1 {
    color: var(--ecf-green);
}

/* BC page end */

/* Lazy loading NEEDS to be at the bottom to override all other styles */
.lazy-load {
    background-image: none;
}

